# ChangeLog for net-p2p/fms
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Dec 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -fms-0.3.22.ebuild, +fms-0.3.25.ebuild:
  Update to latest version

  19 Oct 2008; Dennis Nezic <dennisn@dennisn.dyndns.org> -fms-0.3.21.ebuild,
  +fms-0.3.22.ebuild:
  Version bump

  06 Oct 2008; Dennis Nezic <dennisn@dennisn.dyndns.org> +fms-0.3.21.ebuild,
  +files/fms, +metadata.xml:
  New Ebuild for fms. Thanks to Tommy[D].
