@@ -1,5 +1,5 @@
 AUX fms 280 RMD160 544c3c246a4fe48d131eccdc10290a8577586aff SHA1 77e544cc0d4109edc414c96fdac90f075a79af31 SHA256 b34b78556f529af1f7c43b17656448210b63f3624be868d4d3f396b02e7336ed
-DIST fms-src-0.3.25.zip 1257810 RMD160 7d2552495eef9cf85c80434d34cf1c6b1289735d SHA1 99c0caf2f2a3c3831a64673bb5fe272b06fde61e SHA256 e69bbe144019d731ac1b2767ca6958564e5d04c3cdbefbf73b716a26acf3a924
-EBUILD fms-0.3.25.ebuild 1412 RMD160 d8165d3da67d9071915b3b1c22011bdec92b3a16 SHA1 d4b8ace95859da5b03acb2aa50832efd22afe383 SHA256 d7b0ad3cf5b3440509c07ad4ff3a45f1706e217d3d72dce6cde13823c5b728e1
-MISC ChangeLog 505 RMD160 2c0181281c23ba2d3899618a68f10b2bc48fb000 SHA1 63dc75df507f00a9fcbc50ed1b37e9f702158ab3 SHA256 682530ab3ec248bb1cd8b6a3f4bc38439fa58a68f7c910811c451fb3bf50c4fc
+DIST fms-src-0.3.28.zip 1275422 RMD160 24a366b366c81137d88ed448e1c65463fc0981d0 SHA1 38c774244b24b62aa18c0c32dba230c4003d0b42 SHA256 f531e578b2a135219b516549591da804a63ec0995f9d7fb963317f4de514e181
+EBUILD fms-0.3.28.ebuild 1407 RMD160 c9fc1c336847bb3fcebb37281fea208a77a57a79 SHA1 b338fc027f9a50efb81cf3a810fddbfaaed7765b SHA256 9f256fbc7240ed496caa2d16e5ff4f38749a4b2559a77de091800b5f1041a786
+MISC ChangeLog 623 RMD160 7cc465fb8664a5e5a18bf493c6f8559019254310 SHA1 b17df72390af69c8870b739be2eca422fb0a22b4 SHA256 e6fef1d35dfd1696b7fa4e277e71585fdc525db9e84499887905cf938b63c802
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
