@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/fms
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Jan 2009; Dennis Nezic <dennisn@dennisn.dyndns.org> -fms-0.3.25.ebuild,
+  +fms-0.3.28.ebuild:
+  Updated version
 
   12 Dec 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   -fms-0.3.22.ebuild, +fms-0.3.25.ebuild:
